--- a/Blog/Web/Blog.Web/Views/Posts/AllByTag.cshtml
+++ b/Blog/Web/Blog.Web/Views/Posts/AllByTag.cshtml
@@ -10,7 +10,7 @@
 
 @await Component.InvokeAsync("Header", new HeaderViewModel
 {
-    Title = "All Posts",
+    Title = "By Tag",
     Content = "",
     ImageUrl = "https://res.cloudinary.com/dmvrh3bvc/image/upload/v1591631420/bg_bluegradient_lpytvz.jpg",
 })
