--- a/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
@@ -1,21 +1,62 @@
-﻿@using Blog.Web.ViewModels.Emails.InputModels;
+﻿@using Blog.Web.ViewModels.Common
+@using Blog.Web.ViewModels.Emails.InputModels;
 @model SendEmailInputModel;
 @{
     this.ViewData["Title"] = "Contact Form";
 }
 
-<header class="masthead" style="background-image: url('https://res.cloudinary.com/dmvrh3bvc/image/upload/v1591631155/start-page-image_f5qiij.png') ">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-                <div class="page-heading">
-                    <h1>Contact Me</h1>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
+<style>
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    /* The Modal (background) */
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /* Modal Content */
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+
+    /* The Close Button */
+    .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+</style>
+
+@await Component.InvokeAsync("Header", new HeaderViewModel
+{
+    Title = "Contact Me",
+    Content = "",
+    ImageUrl = "https://res.cloudinary.com/dmvrh3bvc/image/upload/v1591631155/start-page-image_f5qiij.png",
+})
+<vc:header></vc:header>
 
 <!-- Main Content -->
 <div class="container">
@@ -24,67 +65,57 @@
             <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
             <form method="post" id="emailForm">
             </form>
-                <div class="form-group">
-                    <div class="form-group floating-label-form-group">
-                        <label asp-for="Name"></label>
-                        <input asp-for="Name" id="name" class="form-control" placeholder="Name">
-                        <span asp-validation-for="Name"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-group floating-label-form-group">
-                        <label asp-for="Email"></label>
-                        <input asp-for="Email" id="email" class="form-control" placeholder="Email">
-                        <span asp-validation-for="Email"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-group floating-label-form-group">
-                        <label asp-for="Subject"></label>
-                        <input asp-for="Subject" id="subject" class="form-control" placeholder="Subject">
-                        <span asp-validation-for="Subject"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-group floating-label-form-group">
-                        <label asp-for="Message"></label>
-                        <textarea asp-for="Message" id="message" class="form-control" placeholder="Message"></textarea>
-                        <span asp-validation-for="Message"></span>
-                    </div>
-                </div>
-                <br>
             <div class="form-group">
-                <button onclick="sendEmail()" class="btn btn-primary btn-lg btn-block">Send</button>
+                <div class="form-group floating-label-form-group">
+                    <label asp-for="Name"></label>
+                    <input asp-for="Name" id="name" class="form-control" placeholder="Name">
+                    <span asp-validation-for="Name"></span>
+                </div>
             </div>
+            <div class="form-group">
+                <div class="form-group floating-label-form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" id="email" class="form-control" placeholder="Email">
+                    <span asp-validation-for="Email"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-group floating-label-form-group">
+                    <label asp-for="Subject"></label>
+                    <input asp-for="Subject" id="subject" class="form-control" placeholder="Subject">
+                    <span asp-validation-for="Subject"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-group floating-label-form-group">
+                    <label asp-for="Message"></label>
+                    <textarea asp-for="Message" id="message" class="form-control" placeholder="Message"></textarea>
+                    <span asp-validation-for="Message"></span>
+                </div>
+            </div>
+            <br>
+            <div class="form-group">
+                <button data-sitekey="reCAPTCHA_site_key"
+                        data-callback='onSubmit'
+                        data-action='sendEmail' onclick="sendEmail()" id="sendBtn" class="btn btn-primary btn-lg btn-block">
+                    Send
+                </button>
+            </div>
+        </div>
+
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>You have successfully send an email!</p>
+            </div>
+
         </div>
     </div>
 </div>
 <hr>
 
 @section Scripts {
-    <script>
-        function sendEmail() {
-            var token = $("#emailForm input[name=__RequestVerificationToken]").val();
-
-            var json =
-            {
-                name: $("#name").val(),
-                email: $("#email").val(),
-                subject: $("#subject").val(),
-                message: $("#message").val()
-            };
-
-            $.ajax({
-                url: '/api/likes',
-                type: "POST",
-                data: JSON.stringify(json),
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                headers: { 'X-CSRF-TOKEN': token },
-                success: function (result) {
-                    console.log(result);
-                }
-            });
-        };
-    </script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 }
