Add adding and editing for cover letter arrange all code

--- a/Blog/Web/Blog.Web/Views/Posts/Details.cshtml
+++ b/Blog/Web/Blog.Web/Views/Posts/Details.cshtml
@@ -11,7 +11,7 @@
 @await Component.InvokeAsync("Header", new HeaderViewModel
 {
     Title = Model.Title,
-    Content = $"{Model.CreatedOn.Date.Day} {Model.CreatedOn.Date.ToString("MMM", CultureInfo.InvariantCulture)} {Model.CreatedOn.Date.Year})",
+    Content = $"{Model.CreatedOn.Date.Day} {Model.CreatedOn.Date.ToString("MMM", CultureInfo.InvariantCulture)} {Model.CreatedOn.Date.Year}",
     ImageUrl = Model.ImageUrl,
 })
 <vc:header></vc:header>
