--- a/Blog/Web/Blog.Web/Views/Home/About.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/About.cshtml
@@ -1,9 +1,9 @@
 ﻿@using System.Globalization
 @using Blog.Web.ViewModels.Common
-@using Blog.Web.ViewModels.Posts.ViewModels;
-@model IEnumerable<IndexPostViewModel>;
+@model IEnumerable<Blog.Web.ViewModels.Administration.CoverLetter.ViewModels.CoverLetterViewModel>;
 @{
     this.ViewData["Title"] = "About Me";
+    var isAdmin = this.User.IsInRole("Administrator");
 }
 
 <!-- Page Header -->
@@ -18,77 +18,30 @@
 <div class="row">
     <div class="container bg-white">
         <div class="row">
-            <div class="col-xl-12 mt-3 shadow border rounded-lg">
-                <div class="row">
-                    <div class="col-4">
-                        <a href="">
-                            <img src="" class="img-post-all mt-3 rounded">
-                        </a>
-                    </div>
-                    <div class="bg-white col-8 mt-3">
-                        <h3 class="h4">Technical Trainer</h3>
-                        <div class="text-break">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-                        <div class="d-flex mb-3">
-                            <div class="d-flex  text-right flex-wrap ml-4">
-                                <div class="meta font-weight-bold text-dark">
-                                    08/2018 - Present
-                                </div>
+            @foreach (var item in Model)
+            {
+                <div class="col-xl-12 mt-3 shadow border rounded-lg">
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="@item.ImageUrl" class="img-post-all mt-2 mb-2 rounded">
+                        </div>
+                        <div class="bg-white col-8 mt-2">
+                            <h3 class="h4">@item.Title</h3>
+                            <div class="text-break">@item.Content</div>
+
+                            <div class="d-flex mt-4">
+                                @item.StartDate - @(item.EndDate.HasValue ? $"{item.EndDate}" : "Present")
                             </div>
                         </div>
-                    </div>
-                    <hr>
-                    <div class="col-4">
-                        <a href="">
-                            <img src="" class="img-post-all mt-3 rounded">
-                        </a>
-                    </div>
-                    <div class="bg-white col-8 mt-3">
-                        <h3 class="h4">Program Lead</h3>
-                        <div class="text-break">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-                        <div class="d-flex mb-3">
-                            <div class="d-flex  text-right flex-wrap ml-4">
-                                <div class="meta font-weight-bold text-dark">
-                                    08/2018 - Present
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="col-4">
-                        <a href="">
-                            <img src="" class="img-post-all mt-3 rounded">
-                        </a>
-                    </div>
-                    <div class="bg-white col-8 mt-3">
-                        <h3 class="h4">Course Lead</h3>
-                        <div class="text-break">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-                        <div class="d-flex mb-3">
-                            <div class="d-flex  text-right flex-wrap ml-4">
-                                <div class="meta font-weight-bold text-dark">
-                                    08/2018 - Present
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="col-4">
-                        <a href="">
-                            <img src="" class="img-post-all mt-3 rounded">
-                        </a>
-                    </div>
-                    <div class="bg-white col-8 mt-3">
-                        <h3 class="h4">Software Developer Intern</h3>
-                        <div class="text-break">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-                        <div class="d-flex mb-3">
-                            <div class="d-flex  text-right flex-wrap ml-4">
-                                <div class="meta font-weight-bold text-dark">
-                                    08/2018 - Present
-                                </div>
-                            </div>
-                        </div>
+                        <hr>
                     </div>
                 </div>
-            </div>
+                @if (isAdmin)
+                {
+                    <a asp-area="Administration" asp-controller="CoverLetter" asp-action="Edit" class="btn btn-primary">Edit</a>
+                    <a asp-area="Administration" asp-controller="CoverLetter" asp-action="Delete" class="btn btn-primary">Delete</a>
+                }
+            }
         </div>
     </div>
 </div>
