--- a/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
@@ -95,9 +95,7 @@
             </div>
             <br>
             <div class="form-group">
-                <button data-sitekey="reCAPTCHA_site_key"
-                        data-callback='onSubmit'
-                        data-action='sendEmail' onclick="sendEmail()" id="sendBtn" class="btn btn-primary btn-lg btn-block">
+                <button onclick="sendEmail()"  class="btn btn-primary btn-lg btn-block">
                     Send
                 </button>
             </div>
