--- a/Blog/Web/Blog.Web/Views/Posts/All.cshtml
+++ b/Blog/Web/Blog.Web/Views/Posts/All.cshtml
@@ -16,7 +16,7 @@
 })
 <vc:header></vc:header>
 
-<div class="row">
+<div class="row" style="background-image: url('https://res.cloudinary.com/dmvrh3bvc/image/upload/v1592308058/216-2165475_connection-png-page-connected-lines-background-png-transparent_kptklf.png')">
     <div class="container bg-white">
         <div class="row">
             @foreach (var item in Model.Posts)
@@ -34,7 +34,7 @@
                                 <h3 class="h4">@item.Title</h3>
                             </a>
                             <div class="text-break">@item.ShortDescription</div>
-                            <div class="d-flex mt-2">
+                            <div class="d-flex mt-2 mb-3">
                                 <div>
                                     <span class="font-weight-bold text-dark">Stoyan Shopoff</span>
                                 </div>
