Remove email and tags

--- a/Blog/Web/Blog.Web/Areas/Administration/Views/CoverLetter/Create.cshtml
+++ b/Blog/Web/Blog.Web/Areas/Administration/Views/CoverLetter/Create.cshtml
@@ -17,7 +17,7 @@
 
 
 <div class="container mt-4">
-    <form asp-area="Administration" asp-controller="CoverLetter" asp-action="Add" method="post">
+    <form asp-area="Administration" asp-controller="CoverLetter" asp-action="Create" method="post">
         <div class="form-group">
             <label asp-for="@Model.Content"></label>
             <textarea asp-for="@Model.Content" class="form-control" rows="30"></textarea>
