--- a/Blog/Web/Blog.Web/Areas/Administration/Views/Posts/All.cshtml
+++ b/Blog/Web/Blog.Web/Areas/Administration/Views/Posts/All.cshtml
@@ -10,7 +10,7 @@
 
 @await Component.InvokeAsync("Header", new HeaderViewModel
 {
-    Title = "By Tag",
+    Title = "All Posts",
     Content = "",
     ImageUrl = "https://res.cloudinary.com/dmvrh3bvc/image/upload/v1591631420/bg_bluegradient_lpytvz.jpg",
 })
@@ -34,7 +34,7 @@
                                 <h3 class="h4">@item.Title</h3>
                             </a>
                             <div class="text-break">@item.ShortDescription</div>
-                            <div class="d-flex mt-2">
+                            <div class="d-flex mt-2 mb-3">
                                 <div>
                                     <span class="font-weight-bold text-dark">Stoyan Shopoff</span>
                                 </div>
@@ -45,6 +45,8 @@
                                 </div>
                             </div>
                         </div>
+                        <a asp-area="Administration" asp-controller="Posts" asp-action="Delete" asp-route-postId="@item.Id">Delete</a>
+                        <a asp-area="Administration" asp-controller="Posts" asp-action="Edit" asp-route-postId="@item.Id">Edit</a>
                     </div>
                 </div>
             }
@@ -54,5 +56,4 @@
 
 @await Component.InvokeAsync("PostPagination", new { page = Model.CurrentPage })
 <vc:post-pagination></vc:post-pagination>
-<partial name="_TagPartial" />
 <hr />
